feat(documentation): agregado de alta inicial de documentacion
